# main.py
@@ -1,0 +1,10 @@
+from flask import Flask
+
+app = Flask(__name__)
+
+
+#@app.route("/todo-list/<list_id>", methods =['get', 'post'])
+#def get_list(list_id):
+
+#if __name__ == '__main__':
+# app.run(host='0.0.0.0', port=5000)
